<resources>
    <string name="app_name">Android3011</string>
    <string name="hello_message">Hello everyone</string>
    <string name="age">Age</string>
    <string name="silent">Silent</string>
    <string name="moon">Moon</string>
    <string name="we_are_what_we_do">We are what we do</string>
    <string name="sign_up">SIGN UP</string>
    <string name="thoundsand_of_people_usign_silent_mooon_for_small_mediation">Thoundsand of people usign silent mooon for small mediation</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="log_in">LOG IN</string>
    <string name="title_activity_siginin">activity_siginin</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="continue_with_facebook">continue with facebook</string>
    <string name="or_login_with_email">OR LOGIN WITH EMAIL</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="continue_with_google">continue with google</string>
    <string name="_123456789">123456789</string>
    <string name="i_have_read_the">I have read the</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="get_started">get started</string>
</resources>