<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvSilent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgLogo"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toEndOf="@id/tvSilent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMoon"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/todo"
        />
    <TextView
        android:id="@+id/tvMoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moon"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/imgLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/imgFirstLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/firstload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        android:layout_marginTop="85dp"
        />

    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_are_what_we_do"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgFirstLoad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        />
    <TextView
        android:id="@+id/tvExtraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thoundsand_of_people_usign_silent_mooon_for_small_mediation"
        app:layout_constraintTop_toBottomOf="@id/tvSlogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/gray"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvExtraText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@drawable/bg_button"
        android:layout_marginTop="62dp"
        />
    <TextView
        android:id="@+id/tvAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLogin"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:textColor="#A1A4B2"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintStart_toEndOf="@id/tvAlready"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"
        android:textColor="@color/bg_color_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>