<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".activity_signin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/deco"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_icon_back"
        android:layout_marginTop="60dp"

        />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIcon"
        android:layout_marginTop="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_facebook"
        android:background="@drawable/bg_fb_btn"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/iconFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_fb"
        app:layout_constraintTop_toTopOf="@id/btnFB"
        app:layout_constraintStart_toStartOf="@id/btnFB"
        app:layout_constraintBottom_toBottomOf="@id/btnFB"
        app:layout_constraintEnd_toEndOf="@id/btnFB"
        app:layout_constraintHorizontal_bias="0.1"
        android:elevation="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="continue with google"
        app:layout_constraintTop_toBottomOf="@id/btnFB"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_gg_btn"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_gg"
        app:layout_constraintTop_toTopOf="@id/btnGG"
        app:layout_constraintStart_toStartOf="@id/btnGG"
        app:layout_constraintBottom_toBottomOf="@id/btnGG"
        app:layout_constraintEnd_toEndOf="@id/btnGG"
        android:elevation="10dp"
        app:layout_constraintHorizontal_bias="0.1"
        />
    <TextView
        android:id="@+id/tvMethodSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with_email"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnGG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        />
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/tvMethodSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email_address"
            android:background="@drawable/bg_edt"
            />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_edt"
        android:hint="@string/password"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="log in"
        />
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"

        />
    <TextView
        android:id="@+id/tvAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:textColor="#A1A4B2"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintStart_toEndOf="@id/tvAlready"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        android:textColor="@color/bg_color_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>