<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".activity_signup">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/deco"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_icon_back"
        android:layout_marginTop="60dp"

        />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIcon"
        android:layout_marginTop="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_facebook"
        android:background="@drawable/bg_fb_btn"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/iconFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_fb"
        app:layout_constraintTop_toTopOf="@id/btnFB"
        app:layout_constraintStart_toStartOf="@id/btnFB"
        app:layout_constraintBottom_toBottomOf="@id/btnFB"
        app:layout_constraintEnd_toEndOf="@id/btnFB"
        app:layout_constraintHorizontal_bias="0.1"
        android:elevation="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_google"
        app:layout_constraintTop_toBottomOf="@id/btnFB"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_gg_btn"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_gg"
        app:layout_constraintTop_toTopOf="@id/btnGG"
        app:layout_constraintStart_toStartOf="@id/btnGG"
        app:layout_constraintBottom_toBottomOf="@id/btnGG"
        app:layout_constraintEnd_toEndOf="@id/btnGG"
        android:elevation="10dp"
        app:layout_constraintHorizontal_bias="0.1"
        />
    <TextView
        android:id="@+id/tvMethodSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with_email"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnGG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Johny"
        app:layout_constraintTop_toBottomOf="@id/tvMethodSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_edt"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/green_tick"
        app:layout_constraintTop_toTopOf="@id/edtUsername"
        app:layout_constraintEnd_toEndOf="@id/edtUsername"
        app:layout_constraintBottom_toBottomOf="@id/edtUsername"
        android:layout_marginRight="13dp"
        />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Johnyczvas@gmail.com"
        android:background="@drawable/bg_edt"
        android:layout_marginTop="15dp"
        tools:ignore="HardcodedText" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/green_tick"
        app:layout_constraintTop_toTopOf="@id/edtEmail"
        app:layout_constraintEnd_toEndOf="@id/edtEmail"
        app:layout_constraintBottom_toBottomOf="@id/edtEmail"
        android:layout_marginEnd="13dp"
        />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_edt"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:text="@string/_123456789"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eye_password"
        app:layout_constraintTop_toTopOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        android:layout_marginEnd="13dp"
        />
    <TextView
        android:id="@+id/tvCheckPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:textColor="@color/gray"
        android:text="@string/i_have_read_the"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/tvLinkPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textColor="@color/bg_color_button"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintStart_toEndOf="@id/tvCheckPrivacy"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:textSize="15sp"
        />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="-10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/tvCheckPrivacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>